2004-03-29  Andrew Lunn  <andrew.lunn@ascom.ch>

        * test/fseek1.c: Test the fseek/ftell functions
        * cdl/ramfs.cdl: Added a fseek1 test to the build

2004-03-15  Sebastien Couret <sebastien.couret@elios-informatique.fr>

	* src/ramfs.c (block_init): Fixed compiler warning.

2004-02-20  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/ramfs.c :
	(ramfs_find) Policy to skip path separator is no longer
	"if '/' then skip" but "while '/' then skip" allowing
	multi '/' separators (i.e : /tmp////foo).
	(find_entry) Policy to detect end of path is no longer
	"if '\0' then end_of_path"
	but "while '/' skip it and then if '\0' then end_of_path"
	allowing path terminated with any number of '/'
	(i.e : chdir(/tmp///)).

2004-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/ramfs.c (findbuffer_node): If pos larger than even INDIRECT2_MAX
	then return ENOSPC, not EINVAL. Thanks to Vincent Catros for spotting
	this.

2004-01-08  Vincent Catros  <Vincent.Catros@elios-informatique.fr>

	* src/ramfs.c (ramfs_fo_write): Return ENOSPC when the filesystem
	is full.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/ramfs.cdl: Fix doc link.

2002-12-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ramfs.cdl: Implements the CYGINT_IO_FILEIO_FS interface

2002-01-25  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/fileio1.c (main): Check in listdir that the number of 
	dirents is correct.

2001-07-26  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ramfs.c (findbuffer_indirect1): Determine correct offset in
	indirect block list.
	(findbuffer_indirect2): Ditto.
	(findbuffer_direct): Compare block index with number of blocks
	correctly.

2000-10-05  Nick Garnett  <nickg@cygnus.co.uk>

	* tests/fileio1.c:
	Extended to check getcwd() and chdir() functionality more fully.

2000-08-18  Nick Garnett  <nickg@cygnus.co.uk>

	* cdl/ramfs.cdl:
	* src/ramfs.c:
	* tests/fileio1.c:
	Created this example RAM filesystem both as a usable filesystem